# HealthyLifestyleAI

./: CMakeLists.txt  README.md
include/: CommandParser.h  LinearRegression.h  Recommendations.h
src/: CommandParser.cpp  LinearRegression.cpp  Recommendations.cpp  main.cpp
